# turklegal-llm-bench

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: convert_to_arc.py  domain_breakdown.py  push_to_hf.py  run_eval.sh
tasks/: turklegal_bench.yaml
