[project]
name = "turklegal-llm-bench"
version = "0.1.0"
description = "Turkish Legal LLM Benchmark — dataset conversion, evaluation harness, and leaderboard"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.15.0",
    "lm-eval[api,openai]>=0.4.12",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
